--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
   <div class="card">
     <h2>Jour <span id="dayNumber">1</span></h2>
     <div id="sessionContent">
-      <ul id="activities">
-        <li>Échauffement : 5 min corde à sauter ou course sur place</li>
-        <li>Exercice maison : gainage 3 x 30 sec</li>
-        <li>Mur : 50 frappes coup droit / revers</li>
-        <li>Étirements : 5 minutes</li>
-      </ul>
+      <ul id="activities"></ul>
     </div>
     <label for="feedback">Ressenti / progrès :</label>
     <textarea id="feedback" placeholder="Note ton ressenti ici..."></textarea>
@@ -62,27 +57,38 @@
   </div>
 
   <script>
-    const programme = [
-      [
-        "Échauffement : 5 min corde à sauter ou course sur place",
-        "Exercice maison : gainage 3 x 30 sec",
-        "Mur : 50 frappes coup droit / revers",
-        "Étirements : 5 minutes"
-      ],
-      [
-        "Échauffement : 10 min footing léger",
-        "Terrain : service 30 balles (zones ciblées)",
-        "Maison : fente avant avec raquette (3x10)",
-        "Étirements : 5 minutes"
-      ],
-      [
-        "Repos actif : 30 min vélo ou marche rapide",
-        "Mental : visualisation match 10 min",
-        "Vidéo : analyse d’un point pro",
-        "Étirements : 10 min"
-      ],
-      // jours 4 à 30 à compléter
-    ];
+    const programme = [];
+    for (let i = 1; i <= 30; i++) {
+      const daily = [];
+      // 15 min matin maison tous les jours
+      daily.push("Matin : 5 min échauffement dynamique (montées de genoux, jumping jacks)");
+      if (i % 7 === 0) {
+        daily.push("Matin : repos complet ou étirements doux");
+      } else {
+        daily.push("Matin : 10 min gainage/fentes/pompes (2x circuits maison)");
+        daily.push("Matin : 5 min étirements");
+      }
+
+      // 2 midis/semaine (mar/mar ou adaptable)
+      if ([2, 4, 9, 11, 16, 18, 23, 25, 30].includes(i)) {
+        daily.push("Midi : 45 min vélo forêt ou 1 km natation selon météo");
+      }
+
+      // 2 soirs/semaine + 1 WE entraînement tennis
+      if ([3, 6, 10, 13, 17, 20, 24, 27].includes(i)) {
+        daily.push("Soir : Entraînement tennis club 1h15");
+      } else if ([7, 14, 21, 28].includes(i)) {
+        daily.push("Week-end : Match ou tournoi (préparer tactique avant match)");
+      }
+
+      // Ajout mental/tactique ponctuel
+      if ([5, 12, 19, 26].includes(i)) {
+        daily.push("Mental : 10 min visualisation match réussi ou respiration");
+        daily.push("Tactique : analyse 1 vidéo pro");
+      }
+
+      programme.push(daily);
+    }
 
     let currentDay = 0;
 
@@ -100,6 +106,10 @@
       document.getElementById("activities").innerHTML = activityList;
       document.getElementById("feedback").value = "";
     }
+
+    // Affichage initial jour 1
+    const activityList = programme[0].map(item => `<li>${item}</li>`).join('');
+    document.getElementById("activities").innerHTML = activityList;
   </script>
 </body>
 </html>
